Added missing fields to poll rendering

--- a/web/front/assets/css/style.css
+++ b/web/front/assets/css/style.css
@@ -96,3 +96,8 @@ footer {
 .responsive-linear-scale > div {
     flex: 1;
 }
+
+.card-info .card-header {
+    background-color: #4ebada;
+    border-color: #4ebada;
+}
