--- a/src/AppBundle/Resources/views/polls/answer.html.twig
+++ b/src/AppBundle/Resources/views/polls/answer.html.twig
@@ -95,13 +95,25 @@
 {% endblock %}
 
 {% block content %}
+    <div class="card">
+        <div class="card-block">
+            {{ poll.description }}
+        </div>
+    </div>
     {{ form_start(pollView, {attr: {'novalidate':'novalidate'}}) }}
 
     {% for page in poll.pages %}
-        <h3 class="my-5">
-            {{ page.title }}
-            <small class="float-right">{{ 'page_x_on_y' | trans({'{x}': loop.index, '{y}': poll.pages | length}) }}</small>
-        </h3>
+        {#<h3 class="my-5">#}
+        {#</h3>#}
+        <div class="card card-info card-inverse">
+            <div class="card-header">
+                {{ page.title }}
+                <small class="float-right">{{ 'page_x_on_y' | trans({'{x}': loop.index, '{y}': poll.pages | length}) }}</small>
+            </div>
+            <div class="card-block">
+                {{ page.description }}
+            </div>
+        </div>
         {% for question in page.questions %}
             {{ form_widget(attribute(pollView, 'question' ~ question.id)) }}
         {% endfor %}
