--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -7,10 +7,9 @@
         {% block head_meta %}{% endblock %}
         <title>{% block title %}{{ 'homepage' | trans({}, 'AppBundle') }}{% endblock %} | Backoffice | Kodastran</title>
         <!-- Generic top stylesheet -->
-        <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/bootstrap/dist/css/bootstrap.min.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('CoreUI/dist/css/style.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/fontawesome/css/font-awesome.min.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('CoreUI/bower_components/simple-line-icons/css/simple-line-icons.css') }}" type="text/css" />
-        <link rel="stylesheet" href="{{ asset('CoreUI/css/style.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('front/assets/css/kdt-inputs.css') }}" type="text/css" />
 
         <!-- Generic favicon -->
