Bataille remportée contre les {% block bodyclass %}...{% endblock %}

--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -37,7 +37,7 @@
 
     -->
 
-    <body class="{% block bodyclass %}{% endblock %}">
+    <body class="{% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}">
         {% if is_granted('ROLE_USER') %}
             {% include '@App/backoffice/partial/_header.html.twig'%}
         {% endif %}
