--- a/src/AppBundle/Resources/views/backoffice/poll/results.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/results.html.twig
@@ -15,18 +15,26 @@
                         <h2 class="text-center">{{ 'admin_poll.poll_results' | trans }} : {{ poll.title }}</h2>
                     </blockquote>
                 </div>
-                <div class="card-footer d-flex justify-content-center">
-                    <button class="btn btn-default">
-                        <a href="{{ path('backoffice_poll_export', {'id': poll.id}) }}">
-                            <i class="fa fa-file-excel-o" aria-hidden="true"></i> Exporter vers excel
-                        </a>
-                    </button>
-                </div>
+                {% if charts|length %}
+                    <div class="card-footer d-flex justify-content-center">
+                        <button class="btn btn-default">
+                            <a href="{{ path('backoffice_poll_export', {'id': poll.id}) }}">
+                                <i class="fa fa-file-excel-o" aria-hidden="true"></i> Exporter vers excel
+                            </a>
+                        </button>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
     <div class="row">
-
+        {% if charts|length == 0 %}
+            <div class="col-3 mx-auto">
+                <div class="alert alert-warning text-center">
+                    {{ 'admin_poll.poll_results_no_answers' | trans }}
+                </div>
+            </div>
+        {% endif %}
         {% for chart in charts %}
             <div class="col-md-12">
                 <div class="card card-default">
